# EasyCodeIt-WIP

./: .gitmodules  CMakeLists.txt  eci.c
alloc/: alloc.c  alloc.h
cease/: cease.c  cease.h  test.c
parser/: alloc.c  lexer.l  lexer_standalone.l  parser.c  parser.h  parser.y  parser_internal.h  raise.c  raise.h  tree.h
